[tool.poetry]
name = "tankersdk"
version = "0.0.0"
description = "Python client fo Tanker"
authors = ["Tanker team"]
build = "build.py"

include = [
  "build_tanker.py",
  "build.py",
  "cffi_defs.h",
  "cffi_src.c",
]



[tool.poetry.dependencies]
python = "^3.7"
cffi = "^1.13.2"
attrs = "^19.3.0"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
# CI/CD
tankerci = { version = ">= 2023.1.4627", source = "gitlab" }
twine = "^3.2.0"

# linters
black = "22.3.0"
flake8 = "4.0.1"
flake8-comprehensions = "3.10.0"
flake8-docstrings = "1.6.0"
isort = "5.10.1"
mypy = "0.961"
safety = "2.2.0"

# tests
faker = "13.14.0"
requests = "2.28.2"
types-requests = "2.27.31"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-asyncio = "0.20.2"
pytest-xdist = "3.0.2"
tankeradminsdk = { version = "^3.0.0", source = "gitlab" }
tankersdk-identity = "3.3.0"


[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "cffi >= 1.12", "path"]
build-backend = "poetry.core.masonry.api"
