[project]
name = "tankersdk"
version = "0.0.0"
description = "Python client for Tanker"
authors = [{ name = "Tanker team" }]
requires-python = ">=3.9"
dependencies = [
    "cffi >= 1.13.2, < 2.0.0a0",
    "attrs >= 19.3.0, < 20.0.0a0",
    "typing_extensions >= 4.1.0, < 5.0.0a0",
]

[tool.poetry]
name = "tankersdk"
version = "0.0.0"
description = "Python client for Tanker"
authors = ["Tanker team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
cffi = "^1.13.2"
attrs = "^19.3.0"
typing_extensions = "^4.4.0"

[tool.poetry.dev-dependencies]
# CI/CD
tankerci = { version = "== 2024.8.5322", source = "gitlab" }
twine = "^3.2.0"
build = "^0.10.0"

# linters
black = "22.3.0"
flake8 = "7"
flake8-comprehensions = "3.14.0"
flake8-docstrings = "1.7.0"
isort = "5.10.1"
mypy = "1.5"
safety = "2.3.5"

# tests
faker = "13.14.0"
requests = "2.31.0"
types-requests = "2.27.31"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-asyncio = "0.20.2"
pytest-xdist = "3.0.2"
tankeradminsdk = { version = "^6.0.0", source = "gitlab" }
tankersdk-identity = "3.3.3a1"

[tool.poetry.build]
script = "poetry_do_not_build.py"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"
priority = "explicit"

[tool.setuptools]
packages = ["tankersdk"]

[tool.distutils.bdist_wheel]
py-limited-api = "cp39"

[build-system]
requires = ["poetry-core>=1.0.0", "path", "setuptools>=61", "cffi >= 1.12", "build >= 0.10.0"]
build-backend = "setuptools.build_meta"
